# wohn_demo

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/: CMakeLists.txt  sdcard.c  sdcard.h  st7789_driver.c
main/: CMakeLists.txt  idf_component.yml  lv_port.c  lv_port_fs.c  lv_port_fs.h  lvgl_display.c
main/ui/custom/: custom.c  s.md
